--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-        <header class="header">
+    <header class="header">
+        <div class="countainer">
             <nav>
                 <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
                 <ul class="site-nav list">
@@ -35,8 +36,10 @@
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </header>
-        <main>
+        </div>
+    </header>
+    <main>
+        <div class="countainer">
             <section class="section-portf">
                 <h1 class="visually-hidden">Меню</h1>
                 <ul class="button-menu">
@@ -54,7 +57,7 @@
                     </li>
                     <li>
                         <button type="button" class="button-potrf">Маркетинг</button>
-                    </li>     
+                    </li>
                 </ul>
                 <ul class="content">
                     <li>
@@ -104,8 +107,10 @@
                     </li>
                 </ul>
             </section>
-        </main>
-        <footer class="footer">
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="countainer">
             <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-nav">
@@ -116,6 +121,7 @@
                     <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
-        </footer>
+        </div>
+    </footer>
 </body>
 </html>
