--- a/index.html
+++ b/index.html
@@ -13,107 +13,119 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-            <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a> 
-            <ul class="site-nav list">
+        <div class="countainer">
+            <nav>
+                <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li>
+                        <a href="./index.html" class="link current">Студия</a>
+                    </li>
+                    <li>
+                        <a href="./portfolio.html" class="link">Портфолио</a>
+                    </li>
+                    <li>
+                        <a href="/" class="link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="contacts list">
                 <li>
-                    <a href="./index.html" class="link current">Студия</a>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html" class="link">Портфолио</a>
-                </li>
-                <li>
-                    <a href="/" class="link">Контакты</a>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="contacts list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
-        </section>
-        <section class="section">
-            <h2 class="visually-hidden">Особенности</h2>
-            <ul class="peculiarities">
-                <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="text">
-                        Идейные соображения, а также начало повседневной работы по формированию позиции.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="text">
-                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">Планирование</h3>
-                    <p class="text">
-                        Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="text">
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/1.jpg" alt="Верстка" width="370"></li>
-                <li><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
-                <li><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
-            </ul>
-        </section>
-        <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="work-list">
-                <li>
-                    <img src="./images/4.jpg" alt="работник1" width="270">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p class="team-text">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/5.jpg" alt="работник2" width="270">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p class="team-text">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/6.jpg" alt="работник3" width="270">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p class="team-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/7.jpg" alt="работник4" width="270">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p class="team-text">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+        <div class="countainer">
+            <section class="hero">
+                <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+                <button type="button" class="button">Заказать услугу</button>
+            </section>
+        </div>
+        <div class="countainer">
+            <section class="section">
+                <h2 class="visually-hidden">Особенности</h2>
+                <ul class="peculiarities">
+                    <li>
+                        <h3 class="title">Внимание к деталям</h3>
+                        <p class="text">
+                            Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="title">Пунктуальность</h3>
+                        <p class="text">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="title">Планирование</h3>
+                        <p class="text">
+                            Равным образом консультация с широким активом в значительной степени обуславливает.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="title">Современные технологии</h3>
+                        <p class="text">
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="countainer">
+            <section class="section">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul>
+                    <li><img src="./images/1.jpg" alt="Верстка" width="370"></li>
+                    <li><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
+                    <li><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
+                </ul>
+            </section>
+        </div>
+        <div class="countainer">
+            <section class="team">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="work-list">
+                    <li>
+                        <img src="./images/4.jpg" alt="работник1" width="270">
+                        <h3 class="title">Игорь Демьяненко</h3>
+                        <p class="team-text">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/5.jpg" alt="работник2" width="270">
+                        <h3 class="title">Ольга Репина</h3>
+                        <p class="team-text">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./images/6.jpg" alt="работник3" width="270">
+                        <h3 class="title">Николай Тарасов</h3>
+                        <p class="team-text">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/7.jpg" alt="работник4" width="270">
+                        <h3 class="title">Михаил Ермаков</h3>
+                        <p class="team-text">UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
-        <address class="address">
-            <ul class="address-nav">
-                <li><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                        Леси Украинки, 26</a></li>
-                <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
-                <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="countainer">
+            <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
+            <address class="address">
+                <ul class="address-nav">
+                    <li><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
+                            Леси Украинки, 26</a></li>
+                    <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
