--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 </head>
 <body>
     <header class="header">
-        <div class="countainer">
-            <nav>
-                <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-                <ul class="site-nav list">
-                    <li>
+        <div class="countainer main-nav">
+            <nav class="main-nav">
+                <a href="./index.html" class="logo">
+                    <span class="accent">Web</span>Studio
+                </a>
+                <ul class="site-nav">
+                    <li class="item">
                         <a href="./index.html" class="link current">Студия</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="./portfolio.html" class="link">Портфолио</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="/" class="link">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts list">
-                <li>
+            <ul class="contacts">
+                <li class="item">
                     <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
@@ -49,25 +51,25 @@
             <section class="section">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="peculiarities">
-                    <li>
+                    <li class="item">
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Пунктуальность</h3>
                         <p class="text">
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Планирование</h3>
                         <p class="text">
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="title">Современные технологии</h3>
                         <p class="text">
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -77,17 +79,17 @@
             </section>
         </div>
         <div class="countainer">
-            <section class="section">
+            <section class="section image">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./images/1.jpg" alt="Верстка" width="370"></li>
-                    <li><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
-                    <li><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
+                <ul class="img">
+                    <li class="item"><img src="./images/1.jpg" alt="Верстка" width="370"></li>
+                    <li class="item"><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
+                    <li class="item"><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
                 </ul>
             </section>
         </div>
         <div class="countainer">
-            <section class="team">
+            <section class="section team">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="work-list">
                     <li>
