--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="countainer">
             <section class="section image">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul class="img">
+                <ul class="picture">
                     <li class="item"><img src="./images/1.jpg" alt="Верстка" width="370"></li>
                     <li class="item"><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
                     <li class="item"><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
@@ -92,39 +92,63 @@
             <section class="section team">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="work-list">
-                    <li>
-                        <img src="./images/4.jpg" alt="работник1" width="270">
-                        <h3 class="title">Игорь Демьяненко</h3>
-                        <p class="team-text">Product Designer</p>
+                    <li class="item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img src="./images/4.jpg" alt="работник1" width="270">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="title">Игорь Демьяненко</h3>
+                                <p class="team-text">Product Designer</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/5.jpg" alt="работник2" width="270">
-                        <h3 class="title">Ольга Репина</h3>
-                        <p class="team-text">Frontend Developer</p>
+                    <li class="item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img src="./images/5.jpg" alt="работник2" width="270">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="title">Ольга Репина</h3>
+                                <p class="team-text">Frontend Developer</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/6.jpg" alt="работник3" width="270">
-                        <h3 class="title">Николай Тарасов</h3>
-                        <p class="team-text">Marketing</p>
+                    <li class="item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img src="./images/6.jpg" alt="работник3" width="270">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="title">Николай Тарасов</h3>
+                                <p class="team-text">Marketing</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/7.jpg" alt="работник4" width="270">
-                        <h3 class="title">Михаил Ермаков</h3>
-                        <p class="team-text">UI Designer</p>
+                    <li class="item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img src="./images/7.jpg" alt="работник4" width="270">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="title">Михаил Ермаков</h3>
+                                <p class="team-text">UI Designer</p>
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
     <footer class="footer">
-        <div class="countainer">
+        <div class="countainer address">
             <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-nav">
-                    <li><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
+                    <li class="item"><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
                             Леси Украинки, 26</a></li>
-                    <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
-                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
