--- a/portfolio.html
+++ b/portfolio.html
@@ -13,26 +13,28 @@
 </head>
 <body>
     <header class="header">
-        <div class="countainer">
-            <nav>
-                <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-                <ul class="site-nav list">
-                    <li>
+        <div class="countainer main-nav">
+            <nav class="main-nav">
+                <a href="./index.html" class="logo">
+                    <span class="accent">Web</span>Studio
+                </a>
+                <ul class="site-nav">
+                    <li class="item">
                         <a href="./index.html" class="link">Студия</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="./portfolio.html" class="link current">Портфолио</a>
                     </li>
-                    <li>
+                    <li class="item">
                         <a href="/" class="link">Контакты</a>
                     </li>
                 </ul>
             </nav>
-            <ul class="contacts list">
-                <li>
+            <ul class="contacts">
+                <li class="item">
                     <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
@@ -40,85 +42,139 @@
     </header>
     <main>
         <div class="countainer">
-            <section class="section-portf">
+            <section class="section portf">
                 <h1 class="visually-hidden">Меню</h1>
                 <ul class="button-menu">
-                    <li>
+                    <li class="item">
                         <button type="button" class="button-potrf active">Все</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button type="button" class="button-potrf">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button type="button" class="button-potrf">Приложения</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button type="button" class="button-potrf">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button type="button" class="button-potrf">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="content">
-                    <li>
-                        <img src="./images/P1.jpg" alt="ноутбук с веб-сайтом" width="370" height="294">
-                        <h3 class="title">Технокряк</h3>
-                        <p class="context">Веб-сайт</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P1.jpg" alt="ноутбук с веб-сайтом" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Технокряк</h3>
+                                <p class="context">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P2.jpg" alt="два баскетбольных игрока" width="370" height="294">
-                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                        <p class="context">Дизайн</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P2.jpg" alt="два баскетбольных игрока" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                                <p class="context">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P3.jpg" alt="рыба" width="370" height="294">
-                        <h3 class="title">Ресторан Seafood</h3>
-                        <p class="context">Приложение</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P3.jpg" alt="рыба" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Ресторан Seafood</h3>
+                                <p class="context">Приложение</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P4.jpg" alt="наушники" width="370" height="294">
-                        <h3 class="title">Проект Prime</h3>
-                        <p class="context">Маркетинг</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P4.jpg" alt="наушники" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Проект Prime</h3>
+                                <p class="context">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P5.jpg" alt="коробки" width="370" height="294">
-                        <h3 class="title">Проект Boxes</h3>
-                        <p class="context">Приложение</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P5.jpg" alt="коробки" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Проект Boxes</h3>
+                                <p class="context">Приложение</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P6.jpg" alt="монитор" width="370" height="294">
-                        <h3 class="title">Inspiration has no Borders</h3>
-                        <p class="context">Веб-сайт</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P6.jpg" alt="монитор" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Inspiration has no Borders</h3>
+                                <p class="context">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P7.jpg" alt="журнал" width="370" height="294">
-                        <h3 class="title">Издание Limited Edition</h3>
-                        <p class="context">Дизайн</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P7.jpg" alt="журнал" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Издание Limited Edition</h3>
+                                <p class="context">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P8.jpg" alt="бирка" width="370" height="294">
-                        <h3 class="title">Проект LAB</h3>
-                        <p class="context">Маркетинг</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P8.jpg" alt="бирка" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Проект LAB</h3>
+                                <p class="context">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/P9.jpg" alt="ноутбук с веб-сайтом" width="370" height="294">
-                        <h3 class="title">Growing Business</h3>
-                        <p class="context">Приложение</p>
+                    <li class="item">
+                        <article class="card-portf">
+                            <div class="card-thumb">
+                                <img src="./images/P9.jpg" alt="ноутбук с веб-сайтом" width="370" height="294">
+                            </div>
+                            <div class="card-context">
+                                <h3 class="title">Growing Business</h3>
+                                <p class="context">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </section>
         </div>
     </main>
     <footer class="footer">
-        <div class="countainer">
+        <div class="countainer address">
             <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-nav">
-                    <li><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев,
-                            пр-т
+                    <li class="item"><a class="link-nav" href="https://bit.ly/3pXMvUd" target="_blank"
+                            rel="noopener noreferrer">г. Киев, пр-т
                             Леси Украинки, 26</a></li>
-                    <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
-                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item"><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+                    <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
