--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="countainer main-nav">
+        <div class="container main-nav">
             <nav class="main-nav">
                 <a href="./index.html" class="logo">
                     <span class="accent">Web</span>Studio
@@ -41,8 +41,8 @@
         </div>
     </header>
     <main>
-        <div class="countainer">
-            <section class="section portf">
+        <section class="section portf">
+            <div class="container">
                 <h1 class="visually-hidden">Меню</h1>
                 <ul class="button-menu">
                     <li class="item">
@@ -162,11 +162,11 @@
                         </article>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <div class="countainer address">
+        <div class="container address">
             <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-nav">
