--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="countainer main-nav">
+        <div class="container main-nav">
             <nav class="main-nav">
                 <a href="./index.html" class="logo">
                     <span class="accent">Web</span>Studio
@@ -41,14 +41,14 @@
         </div>
     </header>
     <main>
-        <div class="countainer">
-            <section class="hero">
-                <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+        <section class="section hero">
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="button">Заказать услугу</button>
-            </section>
-        </div>
-        <div class="countainer">
-            <section class="section">
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="peculiarities">
                     <li class="item">
@@ -76,20 +76,20 @@
                         </p>
                     </li>
                 </ul>
-            </section>
-        </div>
-        <div class="countainer">
-            <section class="section image">
+            </div>
+        </section>
+        <section class="section image">
+            <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="picture">
                     <li class="item"><img src="./images/1.jpg" alt="Верстка" width="370"></li>
                     <li class="item"><img src="./images/2.jpg" alt="Разработка моб. приложений" width="370"></li>
                     <li class="item"><img src="./images/3.jpg" alt="Робота за ПК" width="370"></li>
                 </ul>
-            </section>
-        </div>
-        <div class="countainer">
-            <section class="section team">
+            </div>
+        </section>
+        <section class="section team">
+            <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="work-list">
                     <li class="item">
@@ -137,11 +137,11 @@
                         </article>
                     </li>
                 </ul>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <div class="countainer address">
+        <div class="container address">
             <a href="./index.html" class="logo-white"><span class="accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-nav">
